# zep-python

./: .fernignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  exceptions.py  index.html  main.py  mkdocs.yml  models.py  objects.inv  pyproject.toml  reference.md  utils.py  zep_client.py
.claude/: claude_config.json
.github/workflows/: build-docs.yml  ci.yml  lint.yml  release-ce.yml  release-cloud.yml  release.yml  test.yml
docs/: conf.py  documents.md  exceptions.md  index.md  index.rst  memory.md  models.md  models_document.md  models_memory.md  requirements.txt  zep_client.md
docs/_static/: .buildinfo
docs/_static/.doctrees/: environment.pickle  index.doctree
documents/: index.html
examples/: .env.example  async.py  async_operations.py  chat_history.py  doc_example.py  documents.py  documents_async.py  langchain_message_history.py  langchain_openai_embeddings.py  langchain_qa_chain.py  langchain_simple_demo.py  llama_index_reader_demo.py  memory_async.py  memory_sync.py  messages.py  messages_async.py  messages_sync.py  sync.py  user_example.py  user_sessions_example.py
examples/autogen-agent/: agent.ipynb
examples/chainlit/: app.py  pyproject.toml
examples/chat_history/: abc.ipynb  chat_history.py  chat_history_shoe_purchase.py  chat_history_travel.py  making_calls.ipynb  memory.py  memory_async.py  memory_retriever.py  messages.py  messages_async.py  messages_sync.py  newtest.ipynb  real_example.ipynb  testing.ipynb  woof.ipynb  working_example.ipynb  zepfloat.ipynb  zeptext.ipynb
examples/community_example/: part1.py  part2.py  runner.py
examples/documents/: babbages_calculating_engine.txt  documents.py  documents_async.py  utils.py
examples/ecommerce-chainlit/: .gitignore  README.md  app.py  chat_history_shoe_purchase.py  ingest.py  pyproject.toml  shoe_data.py
examples/ecommerce-chainlit/.chainlit/: config.toml
examples/graph_example/: conversations.py  entity_types.py  festival_playground.py  graph_example.py  group_graph_example.py  insurance_playground.py  smarthome_playground.py  ticket_playground.py  tickets_example.py  user_graph_example.py  wellness_playground.py
examples/langchain/: README.md  ingest.py
examples/langchain-langserve/: .env.example  Dockerfile  README.md  pyproject.toml
examples/langchain-langserve/app/: classification_chain.py  ingest.py  message_history_chain.py  message_history_vector_store_chain.py  rag_vector_store_chain.py  real_world_classification.py  server.py
examples/langchain/rag_conversation_zep/: chain.py
examples/langgraph-agent/: agent.ipynb
examples/langserve-sample/: pyproject.toml
examples/langserve-sample/app/: server.py
examples/openai-agents-sdk/: README.md  openai_agents_sdk_example.py
examples/quickstart/: quickstart.ipynb
examples/travel_bot_example/app/: .gitignore  app.py  schema.py
examples/zep-openai/: README.md  async_example.py  basic_sync_example.py  requirements.txt  streaming_example.py
exceptions/: index.html
go/: document_client.go  error_handling.go  http_requests.go  main.go  memory_client.go  user_client.go  zep_client.go
memory/: index.html
models/: index.html
models_document/: index.html
models_memory/: index.html
src/example/: memory_async.py
src/zep/: __init__.py  base_client.py  client.py  document.py  environment.py  memory.py  messages.py  user.py  version.py
src/zep/base_document/: client.py
src/zep/base_memory/: __init__.py  client.py
src/zep/base_messages/: client.py
src/zep/base_user/: client.py
src/zep/collection/: client.py
src/zep/core/: client_wrapper.py
src/zep_cloud/: __init__.py  base_client.py  client.py  environment.py  version.py
src/zep_python/: __init__.py  base_client.py  client.py  version.py
tests/: __init__.py  client_test.py  conftest.py  doc_client_test.py  document_test.py  documents_test.py  fixtures.py  memory_test.py  openai_fixtures.py  test_openai_async.py  test_openai_client.py  test_openai_streaming.py  test_openai_utils.py  user_test.py
tests/graph/: test_utils.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
zep/: __init__.py  exceptions.py  models.py  utils.py  zep_client.py
zep_client/: index.html
zep_python/: __init__.py  document_client.py  document_models.py  exceptions.py  memory_client.py  models.py  utils.py  zep_client.py
zep_python/document/: __init__.py  client.py  collections.py  models.py
zep_python/langchain/: __init__.py  history.py  vectorstore.py
zep_python/memory/: client.py  memory.py  models.py
zep_python/message/: __init__.py  client.py  models.py
zep_python/user/: __init__.py  client.py  models.py
(+437 files in other folders)
