[tool.poetry]
name = "zep-python"
version = "2.0.0-rc.4"
description = "Long-Term Memory for AI Assistants. This is the Python client for the Zep service."
authors = ["Daniel Chalef <daniel.chalef@private.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<4"
httpx = "^0.26.0"
pydantic = ">=2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-httpx = "^0.28.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.291"
mypy = "^1.2.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
packaging = "^23.1"
black = "^24.2.0"
ruff = ">=0.0.291"
mypy = "^1.2.0"
pre-commit = "^3.3.1"
pytest-httpx = "^0.28.0"
faker = "^19.2.0"
python-dotenv = "^1.0.0"
pdoc3 = "^0.10.0"
langchain = "^0.1.3"
openai = "^1.9.0"
langchain-openai = "^0.0.3"
langchain-cli = { extras = ["serve"], version = "^0.0.21" }
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
