[tool.poetry]
name = "zep-cloud"
version = "2.12.3"
description = ""
readme = "README.md"
authors = []
packages = [{ include = "zep_cloud", from = "src" }]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
langchain = "^0.1.3"
openai = "^1.9.0"
langchain-openai = "^0.0.3"
black = "^24.4.2"
ruff = "^0.4.8"
ipykernel = "^6.29.4"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
